[project]
name = "trustora-escrow"
version = "0.1.0"
description = "Trustora Escrow Telegram bot with watcher and signer services."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "aiogram==3.4.1",
  "SQLAlchemy==2.0.30",
  "alembic==1.13.2",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "redis==5.0.4",
  "asyncpg==0.29.0",
  "web3==6.15.1",
  "httpx==0.27.0",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "ruff==0.4.8",
  "black==24.4.2",
  "mypy==1.10.0",
  "aiohttp==3.9.5",
  "tronpy==0.5.0",
  "cryptography==42.0.7",
]

[build-system]
requires = ["setuptools==69.5.1", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trustora", "app", "services", "services.signer", "services.watcher_bsc", "services.watcher_tron"]

[tool.black]
line-length = 100

target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
